feat: adicionando a rota que retorna os registros
