# src/routes/routes.js
@@ -17,6 +17,7 @@ router.put('/category', CategoryController.editCategory);
 router.delete('/category/:id', CategoryController.deleteCategory);
 
 // Rotas Items
+router.get('/records/:date', ItemController.getAllRecords);
 router.get('/items', ItemController.getAllItems);
 router.get('/item/:id', ItemController.getItemById);
 router.get('/item/record/:id', ItemController.getRecordById);
